# RayTracing-ProgressivePhotonMapping

./: .gitignore  .gitmodules  .serial.cpp.swo  .ycm_extra_conf.py  CMakeLists.txt  README.md  Report.md  config.txt  config_test.txt  linux.toolchain.cmake  main.cpp  serial.cpp  unittest.cpp
Core/: Color.cpp  Color.h  Vector.cpp  Vector.h
Display/: PaintBoard.cpp
configures/: config.json  config_ppm.json  config_room.json  config_test_light.json  config_test_light.txt  config_test_vector.json  config_test_vector.txt  gen_config.py
configures/objects/: area_light.json  bazier_curves.json  floor.json  marble_ball.json  point_light.json  sphere.json  template.json
core/: CMakeLists.txt  camera.cpp  camera.h  color.cpp  color.h  gobject.cpp  gobject.h  light.cpp  light.h  object.cpp  object.h  ray.h  sceneloader.cpp  sceneloader.h  texture.cpp  texture.h  vector.cpp  vector.h
display/: CMakeLists.txt  PaintBoard.cpp  PaintBoard.h  paint_board.cpp  paint_board.h  paintboard.h
materials/: cup.blend
objects/: CMakeLists.txt  area_light.cpp  area_light.h  bazier_curve.cpp  bazier_curve.h  plane.cpp  plane.h  point_light.cpp  point_light.h  sphere.cpp  sphere.h  square.cpp  square.h
render/: CMakeLists.txt  progressive_photon_mapping.cpp  progressive_photon_mapping.h  raytracing.cpp  raytracing.h  render.cpp  render.h  scene.cpp  scene.h
samples/: CMakeLists.txt  Makefile  bazier_curve.cpp  bazier_solver.py  bazier_solver_tmp.py  cmake_install.cmake  cup.py  curve.py  draw_testing.cpp  eigen_rotation.cpp  multithread_test.cpp  pull.sh
